--- a/Marlin/Views/Main/ActionsPage.xaml
+++ b/Marlin/Views/Main/ActionsPage.xaml
@@ -42,8 +42,8 @@
             <Grid Grid.Row="1"
                   Margin="50,0,50,10">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="{Binding Path=LengthAbout}"/>
                 </Grid.ColumnDefinitions>
 
                 <Grid Grid.Column="0">
