--- a/Marlin/Views/Main/CommandPage.xaml
+++ b/Marlin/Views/Main/CommandPage.xaml
@@ -547,13 +547,13 @@
                                         <RowDefinition Height="auto"/>
                                     </Grid.RowDefinitions>
 
-                                    <ScrollViewer VerticalScrollBarVisibility="Hidden"
-                                                  Margin="0,3"
-                                                  Content="{Binding Path=StackPanel}">
+                                    <ScrollContentPresenter Margin="0,3"
+                                                            Content="{Binding Path=StackPanel}">
                                         <!--<StackPanel Grid.Row="0"
                                                     Margin="0,10">
                                             <Grid>
                                                 <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"/>
                                                     <ColumnDefinition Width="auto"/>
                                                     <ColumnDefinition Width="auto"/>
                                                 </Grid.ColumnDefinitions>
@@ -566,7 +566,8 @@
                                                       VerticalAlignment="Top"
                                                       MinWidth="50"/>
 
-                                                <Grid Grid.Column="1">
+                                                <Grid Grid.Column="1"
+                                                      Margin="0,0,10,0">
                                                     <Grid.RowDefinitions>
                                                         <RowDefinition Height="{Binding Path=LengthTextTrigger}"/>
                                                         <RowDefinition Height="{Binding Path=LengthAppTrigger}"/>
@@ -604,12 +605,13 @@
                                                              Text="Программа 1"/>
                                                     </Grid>
                                                 </Grid>
+
+                                                <Button Grid.Column="2"
+                                                        Content="Удалить"/>
                                             </Grid>
                                         </StackPanel>-->
-                                    </ScrollViewer>
-
+                                    </ScrollContentPresenter>
                                     
-
                                     <Button Grid.Row="1"
                                             FontSize="15"
                                             Margin="0,10,0,0"
@@ -618,6 +620,7 @@
                                             Command="{Binding Path=AddTriggerCommand}"
                                             Foreground="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                                             Content="Добавить триггер"/>
+                                    
                                 </Grid>
                             </Grid>
                         </Grid>
@@ -642,7 +645,7 @@
                                      MinWidth="100"
                                      Padding="10,5"
                                      TextWrapping="Wrap"
-                                     Text="{Binding Path=Comment}"/>
+                                     Text="{Binding Path=Comment,UpdateSourceTrigger=PropertyChanged}"/>
                         </Grid>
                     </Grid>
                 </ScrollViewer>
