--- a/Marlin/Views/Main/CommandPage.xaml
+++ b/Marlin/Views/Main/CommandPage.xaml
@@ -515,40 +515,24 @@
                                        VerticalAlignment="Top"
                                        FontWeight="Bold"
                                        Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
-                                       Text="Активация:"/>
+                                       Text="Взаимодействие:"/>
 
-                            <Grid Grid.Column="1">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height ="auto"/>
-                                    <RowDefinition Height ="auto"/>
-                                </Grid.RowDefinitions>
+                            <Grid Grid.Column="1"
+                                  Margin="0,5">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="auto"/>
+                                </Grid.ColumnDefinitions>
 
-                                <Grid Grid.Row="0"
-                                      Margin="0,5">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="auto"/>
-                                        <ColumnDefinition Width="auto"/>
-                                    </Grid.ColumnDefinitions>
-                                    
-                                    <TextBlock Grid.Column="0"  
+                                <TextBlock Grid.Column="0"  
                                                FontSize="15"
                                                Margin="0,0,10,0"
                                                FontWeight="Bold"
                                                Foreground="{Binding Path=FontColor,UpdateSourceTrigger=PropertyChanged}"
-                                               Text="Запрашивать пароль перед запуском"/>
-                                    
-                                    <CheckBox Grid.Column="1"
-                                              IsChecked="{Binding Path=Checkpuss,UpdateSourceTrigger=PropertyChanged}"/>
-                                </Grid>
+                                               Text="Защитить паролем"/>
 
-                                <Button Grid.Row="1"
-                                            FontSize="15"
-                                            Margin="0,10,0,0"
-                                            Width="auto"
-                                            HorizontalAlignment="Left"
-                                            Command="{Binding Path=AddTriggerCommand}"
-                                            Foreground="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
-                                            Content="Добавить триггер"/>
+                                <CheckBox Grid.Column="1"
+                                              IsChecked="{Binding Path=Checkpuss,UpdateSourceTrigger=PropertyChanged}"/>
                             </Grid>
                         </Grid>
 
