--- a/Marlin/Views/Main/MainPage.xaml
+++ b/Marlin/Views/Main/MainPage.xaml
@@ -150,6 +150,13 @@
                     </Border>
                 </Grid>
             </Grid>
+
+            <TextBlock Grid.Row="2"
+                       Margin="0,0,15,10"
+                       Foreground="{Binding Path=FontColor}"
+                       HorizontalAlignment="Right"
+                       VerticalAlignment="Bottom"
+                       Text="by Bolofficial"/>
         </Grid>
     </Grid>
 </Page>
